Fix .toList